--- a/hackfest/package.json
+++ b/hackfest/package.json
@@ -8,11 +8,12 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook": "^0.0.1",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
