--- a/hackfest/package.json
+++ b/hackfest/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1"
   },
   "devDependencies": {
